# Biometric-Access-Control-System

./: README.md
backend/: .env-example  README.md  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20250713052317_init/: migration.sql
backend/prisma/migrations/20251015163144_init/: migration.sql
backend/src/: routes.ts  server.ts
backend/src/@types/: fastify.d.ts
backend/src/config/: app.ts  prisma.ts
backend/src/controllers/access/: GetBiometricAccessLogsController.ts  GetWebAccessLogsController.ts
backend/src/controllers/auth/: ChangePasswordController.ts  ForgotPasswordController.ts  LoginController.ts  LogoutController.ts  ResetPasswordController.ts
backend/src/controllers/biometrics/: CreateBiometricController.ts  DeleteBiometricController.ts
backend/src/controllers/employees/: CreateEmployeeController.ts  (+1 more)
backend/src/lib/: errorHandler.ts
backend/src/middlewares/: authMiddleware.ts
backend/src/utils/: cpfValidator.ts  emailSender.ts  passwordGenerator.ts
c++/: CMakeLists.txt  README.md
c++/include/: python_interface.h  sensor_communication.h  typescript_interface.h
c++/src/: main.cpp  python_interface.cpp  sensor_communication.cpp  typescript_interface.cpp
frontend/: README.md  index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
python/: .env.example  README.md  biometric_query.py  biometric_service.py  database.py
(+42 files in other folders)
